Use unlikely, gated behind the "nightly" feature
LLVM likes to compile Reciprocal::apply's early exit on overflow
(when dividing u64::MAX) like a fast path, but it's really closer
to cold error handling.

We get nicer code with an `unlikely` annotation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ repository = "https://github.com/pkhuong/reciprocal"
 keywords = ["division", "div-by-mul", "precomputation"]
 categories = ["algorithms", "caching"]
 
+[features]
+# Enable core::intrinsics::unlikely with the nightly feature.
+nightly = []
+
 [profile.bench]
 opt-level = 3
 
