benches/div_latency: add fixed-divisor latency benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,9 @@ name = "div_throughput"
 harness = false
 
 [[bench]]
+name = "div_latency"
+harness = false
+
+[[bench]]
 name = "div_throughput_variable"
 harness = false
