travis.yml: ah, bash conditionals

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ dist: bionic
 cache: cargo
 
 before_script: |
-  if [ "x$TRAVIS_RUST_VERSION" -eq xstable -a "x$TRAVIS_CPU_ARCH" -eq xamd64 ]; then
+  if [ "x$TRAVIS_RUST_VERSION" == xstable -a "x$TRAVIS_CPU_ARCH" == xamd64 ]; then
     cargo install cargo-tarpaulin
   fi
 
@@ -27,6 +27,6 @@ script:
 - cargo test
 
 after_success: |
-  if [ "x$TRAVIS_RUST_VERSION" -eq xstable -a "x$TRAVIS_CPU_ARCH" -eq xamd64 ]; then
+  if [ "x$TRAVIS_RUST_VERSION" == xstable -a "x$TRAVIS_CPU_ARCH" == xamd64 ]; then
     cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
   fi
